QMetaContainer: add missing #include <iterator>

For std::iterator_traits, tags, std::advance, std::distance, etc.

Fixes: QTBUG-114583
Change-Id: I443cf0c8a76243eead33fffd1768e904ae823f75
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit 003c29511de5979fba526acd62f2a4c7c356b982)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>